Fixed image alignment.

--- a/style.css
+++ b/style.css
@@ -96,26 +96,32 @@ header li {
 
 /* Intro */
 #intro {
+    margin: auto;
     margin: 50px;
     border: 5px gray solid;
+    font-family: 'Roboto Mono', monospace;
 }
 
 #intro #blurb {
-    float: left;
-    width: 30%;
-    padding: 2vw;
+    display: inline-block;
+    width: 45%;
+    padding: 1vw;
 }
 
 #pic {
-    float: right;
+    display: inline;
 }
 
 #pic img {
-    width: 40px;
+    width: 40%;
+    margin: 0;
 }
 
 #name {
-    font-size: 100px;
+    font-size: 150px;
+    margin: 0;
+    margin-top: -20px;
+    line-height: 150px;
 }
 
 
